--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "keywords": ["request","access controller","router","website"],
     "license": "MIT",
     "type": "library",
-    "homepage": "http://paulorocha.tk/devbr/",
+    "homepage": "http://dbrasil.tk/devbr/",
     "authors": [{
         "name": "Bill Rocha",
         "email": "prbr@ymail.com"
