--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,9 @@
         "php": ">=5.6.28"
     },
     "autoload": {
-        "psr-4": {"Devbr\\": ""}
+        "psr-4": {
+            "Devbr\\": "",
+            "Config\\":"Config/"
+        }
     }
 }
